k8s/tetris/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-frontend-service
  namespace: tetris-app
spec:
  selector:
    app: tetris
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
